--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@
   height: 100%;
   z-index: 2;
   margin: 0;
-  background-color: rgba(0, 0, 0, 0.25);
+  /* background-color: rgba(0, 0, 0, 0.25); */
 }
 
 #mainMenu div {
@@ -232,14 +232,14 @@
 #controlsHud {
   z-index: 2;
   position: absolute;
-  /*
   width: 100%;
   height: 100%;
-  */
+  pointer-events: none;
 }
 
-.layer2 {
+.clickable {
   z-index: 2;
+  pointer-events: initial;
 }
 
 .shootControls {
